added get, post, put and delete requests